@@ -4,7 +4,7 @@
 # General configuration options
 #---------------------------------------------------------------------------
 PROJECT_NAME           = "ZVBI Library"
-PROJECT_NUMBER         = 0.2.3
+PROJECT_NUMBER         = 0.2.4
 OUTPUT_DIRECTORY       = 
 OUTPUT_LANGUAGE        = English
 EXTRACT_ALL            = NO
