@@ -17,7 +17,7 @@
  *  Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
  */
 
-/* $Id: format.h,v 1.4 2002-10-22 04:42:40 mschimek Exp $ */
+/* $Id: format.h,v 1.5 2002-12-24 15:16:26 mschimek Exp $ */
 
 #ifndef FORMAT_H
 #define FORMAT_H
@@ -385,7 +385,7 @@ typedef struct vbi_page {
 	struct {
 		int			pgno, subno;
 	}			nav_link[6];
-	char			nav_index[64];
+	int8_t			nav_index[64];
 
 	struct vbi_font_descr *	font[2];
 	unsigned int		double_height_lower;	/* legacy */
